# decache-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: browsette.rs  cache2_entry_metadata.rs  cache_data_metadata.rs  dataset.rs  decache-rs.7z  firefox_cache_index_parser.rs  gui_communication.rs  main.rs  main.rs.10_05.29-05-2026.bak  main.rs.10_05.31-05-2026.bak  phash_ai_slop.rs  phash_ai_slop.rs.bak  phash_generator.rs  scanner.rs
