[package]
name = "decache-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
walkdir = "2"
dirs = "6.0.0"
rusqlite = { version = "0.39", features = ["bundled"] }
infer = "0.19.0"
#image operations and hashing
ffmpeg-sidecar = "2.5.1"
img_hash = "3.2"
image = { version = "0.23.14", features = ["png"] }
#other
tokio = { version = "1", features = ["full"] }
reqwest = "0.13.4"
chrome-cache-parser = "0.2.5"
#file parsing
serde_json = "1.0.150"
rust-ini = "0.21.3"
byteorder = "1.5.0"
#ui
eframe = "0.34.3"
